--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 
         <!-- display current time -->
         <div id="clock"></div>
-        <h1>Set Alarm</h1>
+        <!-- <h1>Set Alarm</h1> -->
 
         <!-- set alarms -->
         <div id="setAlarm">
+            <h1>Set Alarm</h1>
             <div id="input_div">
                 <input class="time" placeholder="HH" type="number" min="0" max="12" id="hour">
                 <input class="time" placeholder="MM" type="number" min="0" max="59" id="minute">
