--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <div id="alarm_list_head">
             <h2 id="no_alarm" class="invisible">Alarms</h2>
-            <button id="clear_all" class="invisible">Clear All</button>
+            <button id="clear_all" class="invisible">Clear</button>
         </div>
         <!-- container for alarms saved -->
         <div id="alarm_list_container">
